can now send emails with node.js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.6.4",
     "yarn": "^1.6.0"
   },
   "devDependencies": {
