--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www",
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "set NODE_ENV=development&& start cmd /k npm test && concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "prod": "set NODE_ENV=production&& concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "test": "cd client && npm test"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
